agrego sass modificado

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <img class="rect4" src="./image/Rectangle 70.png" alt="" />
-        <img class="rect3" src="./image/Rectangle 71.png" alt="" />
-        <img class="rect2" src="./image/Rectangle 72.png" alt="" />
-        <img class="rect1" src="./image/Rectangle 73.png" alt="" />
+        <div class="purple"></div>
+        <div class="green"></div>
+        <div class="blue"></div>
+        <div class="yellow"></div>
         <img class="logo" src="./image/logo.png" alt="" />
         <nav>
           <ul>
